--- a/Lavendieksam_RadionovTARpe17/Views/Kitarrid/Index.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Kitarrid/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Lavendieksam_RadionovTARpe17.Models.Kitarr>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Meie alandlik kitarrivalik!";
 }
 
-<h2>Index</h2>
+<h2>Kitarrid</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Lisa müüki", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Hind)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Muuda", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Osta", "Osta", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Kustuta", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
