--- a/Lavendieksam_RadionovTARpe17/Views/Plaadid/Index.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Plaadid/Index.cshtml
@@ -41,9 +41,10 @@
             @Html.DisplayFor(modelItem => item.Hind)
         </td>
         <td>
-            @Html.ActionLink("Muuda", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Osta", "Osta", new { id=item.Id }) |
-            @Html.ActionLink("Kustuta", "Delete", new { id=item.Id })
+            @Html.ActionLink("Muuda", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Osta", "Osta", new { id = item.Id }) |
+            @Html.ActionLink("Kustuta", "Delete", new { id = item.Id }) |
+            @Html.ActionLink("Detailid", "Details", new { id = item.Id })
         </td>
     </tr>
 }
