--- a/Lavendieksam_RadionovTARpe17/Views/Plaadid/Index.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Plaadid/Index.cshtml
@@ -26,27 +26,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nimi)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Artist)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Žanr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Hind)
-        </td>
-        <td>
-            @Html.ActionLink("Muuda", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Osta", "Osta", new { id = item.Id }) |
-            @Html.ActionLink("Kustuta", "Delete", new { id = item.Id }) |
-            @Html.ActionLink("Detailid", "Details", new { id = item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nimi)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Artist)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Žanr)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Hind)€
+            </td>
+            <td>
+                @Html.ActionLink("Muuda", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Osta", "Osta", new { id = item.Id }) |
+                @Html.ActionLink("Kustuta", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("Detailid", "Details", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
+<div>
+Kõikide toodete hind kokku: @Model.Sum(i => i.Hind)€
+</div>
