Lisa lehe põhja kellaaeg ning täienda kodulehekülge

--- a/Lavendieksam_RadionovTARpe17/Views/Home/Index.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Home/Index.cshtml
@@ -1,3 +1,23 @@
 ﻿@{
     ViewBag.Title = "Muusikapood";
 }
+
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>Tere tulemast meie lehele!</h2>
+        <p>
+            <b>Siit leiate väikse valiku kitarre ja plaate, mida me müüme. Vaadake ringi ja loodetavasti leiate midagi meelepärast!
+        </p></b>
+    </div>
+    <div class="col-md-4">
+        <h2>Sirvige kitarre</h2>
+        <p><b>"Ainult parimad kitarrid kõige parema hinnaga"</p></b><br/>
+        <p><a style=center: class="btn btn-default" href="/Kitarrid">Kitarrid &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Sirvige Plaate</h2>
+        <p><b>"Kõige vanemad klassikad ning kõige uuemad hitid ühes kohas"</b></p>
+        <p><a class="btn btn-default" href="/Plaadid">Plaadid &raquo;</a></p>
+    </div>
+</div>
