--- a/Lavendieksam_RadionovTARpe17/Views/Shared/_Layout.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Muusikapood Radionov TARpe17</p>
+            <p>Kellaaeg: @DateTime.Now</p>
         </footer>
     </div>
 
