Muuda tabelid paremini loetavaks, lisades neile tausta ning sujuva üleminekuga hover-efekti. Lisa agregaatfunktsioonid samuti sama efektiga tabelisse, et need samuti loetavamaks muuta.

--- a/Lavendieksam_RadionovTARpe17/Views/Kitarrid/Index.cshtml
+++ b/Lavendieksam_RadionovTARpe17/Views/Kitarrid/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Lisa müüki", "Create")
 </p>
-<table class="table">
+<table class="hoverTable">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Mudel)
@@ -39,6 +39,6 @@
 
 </table>
 
-<div>
-Kõikide toodete hind kokku: @Model.Sum(i=>i.Hind)€ 
-</div>
+<table class="hoverTable">
+    <tr><td>Kõikide toodete hind kokku: @Model.Sum(i => i.Hind)€</td></tr>
+</table>
