--- a/Lavendieksam_RadionovTARpe17/Content/Site.css
+++ b/Lavendieksam_RadionovTARpe17/Content/Site.css
@@ -26,3 +26,27 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.hoverTable {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.hoverTable td {
+    padding: 7px;
+    border: #4e95f4 1px solid;
+}
+    /* Defineerib tabeli taustavärvi, opacity teeb tabeli õrnalt läbipaistvaks, et see loomulikum välja näeks, transition lisab sujuva ülemineku hover efektile */
+    .hoverTable tr {
+        border: none;
+        outline: 0;
+        background: #FAEBD7;
+        opacity:0.91;
+        transition: all 0.4s ease;
+    }
+    /* Defineerib hover värvi, viimane 0.91 number on jälle opacity ehk läbipaistvus. */
+    .hoverTable tr:hover {
+        background-color: rgba(185, 185, 185, 0.91);
+    }
+
+
