--- a/Lavendieksam_RadionovTARpe17/Content/Site.css
+++ b/Lavendieksam_RadionovTARpe17/Content/Site.css
@@ -49,4 +49,24 @@ textarea {
         background-color: rgba(185, 185, 185, 0.91);
     }
 
+.li {
+    overflow: hidden;
+    background-color: #393939;
+}
 
+    .li a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        margin-left: 200px;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        transition: all 0.7s ease;
+    }
+
+.li a:hover {
+    background-color: #ddd;
+    color: black;
+}
